# scbw-gen

./: .gitignore  3D_ASSET_IMPORT_README.md  ALGORITHMS_DOCUMENTATION.md  ANIMATION_SETUP_INSTRUCTIONS.md  ANIMATION_SYSTEM_README.md  BLENDER_ADAPTATION_SUMMARY.md  BLENDER_PIPELINE_README.md  BLENDER_SCRIPTS_DOCUMENTATION.md  BLENDER_SCRIPTS_SUMMARY.md  CMakeLists.txt  COMMANDS.md  CONFIGURATION_SYSTEM_SUMMARY.md  EXR_PROCESSING_README.md  FINAL_INSTRUCTIONS.md  LICENSE  LIGHTING_SYSTEM_README.md  MATERIALS_AND_TEXTURES_GUIDE.md  MATERIALS_SUMMARY.md  MATERIALS_USAGE_GUIDE.md  MATH_ENGINE_README.md  MVP_README.md  MVP_SUMMARY.md  PERFORMANCE_MANAGEMENT_DOCUMENTATION.md  PIPELINE_RESULTS.md  README.md  README_CONFIG_SYSTEM.md  README_USD_GENERATOR.md  README_YAML_BLENDER.md  REF_PLACES.md  USD_SCENE_GENERATOR.md  YAML_INSTALLATION_GUIDE.md  asset_3d_importer.py  asset_manager.py  batch_render_example.yaml  blender_runner.py  build_scene.py  check_scene.py  config_manager.py  config_parser.py  create_advanced_starcraft_scene.py  (+57 more)
algorithms/: advanced_performance_manager.py  building_placement.py  integrated_scene_generator.py  pathfinding.py  performance_optimizer.py  scene_composition.py  terrain_generator.py  unit_placement.py
assets/: README.md
assets/3d_assets/: config.yaml
assets/animations/: animations_config.yaml
assets/buildings/: buildings_config.yaml  test_config.yaml
assets/effects/: effects_config.yaml
assets/templates/: battle_scene_template.yaml
assets/terrain/: terrain_config.yaml
assets/units/: units_config.yaml
blender/: README.md  __init__.py  advanced_config_importer.py  advanced_geometry_generator.py  advanced_render_pipeline.py  animation_examples.py  animation_system.py  asset_importer.py  config.py  enhanced_config_importer.py  enhanced_geometry_generator.py  enhanced_render_pipeline.py  enhanced_scene_generator.py  example_usage.py  exr_packager.py  generate_passes.py  hdri_environment.py  integrated_animation_pipeline.py  integrated_blender_pipeline.py  lighting_config.py  lighting_system.py  material_generator.py  performance_integrated_pipeline.py  render_pipeline.py  scene_generator.py  scene_template.py  startup_script.py  test_advanced_pipeline.py  test_pipeline.py
build-make/: CMakeCache.txt  Makefile  cmake_install.cmake  demo_viewer
configs/lighting/: battle_sunset_lighting.yaml  night_battle_lighting.yaml  studio_clean_lighting.yaml
examples/: exr_demo.cpp
houdini/: README.md  __init__.py  config.py  generate_passes.py  passes.py
include/: exr_processor.h  viewer.h  viewer_utils.h
include/math/: camera.h  geometry.h  mat3.h  mat4.h  math.h  transform.h  vec2.h  vec3.h  vec4.h
params/: pack.json  pack.yaml
python_math/: math_engine.py
renders/blender/: shot_1001_depth_00010001.exr  shot_1001_multi_00010001.exr
scbw_gen/overlay/: __init__.py  overlay_driver.py  ui_overlay_config.yaml
scbw_gen/post_fx/: __init__.py  post_fx_compositor.py
src/: compositor.cpp  exr_processor.cpp  image_filters.cpp  main.c  main.cpp  math_test.cpp  viewer.c  viewer.cpp  viewer_utils.c
tests/: test_generate_passes.py  test_pass_assembler.py
wolfram/: generate.wl
